--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CuentaContable/CuentaContable.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CuentaContable/CuentaContable.cshtml
@@ -85,7 +85,7 @@
                                         }
                                         else
                                         {
-                                            <button btn id="btnUpDate" formaction="Modificar" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
+                                            <button btn id="btnUpDate" formaction="@Url.Action("ActivarEditar")" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
                                                 <i class="zmdi zmdi-swap"></i>
                                             </button>
                                         }
