--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/CuentasXPagar.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/CuentasXPagar.cshtml
@@ -38,7 +38,7 @@
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
                                 <li class="breadcrumb-item">Reportes</li>
-                                <li class="breadcrumb-item">Cuentas por pagar</li>
+                                <li class="breadcrumb-item">Gastos</li>
                             </ul>
                         </div>
                     </div>
