--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/EquipoTransporte/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/EquipoTransporte/Index.cshtml
@@ -122,7 +122,7 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <strong>Número de Motor:*</strong>
-                                        @Html.TextBoxFor(m => m.NumMotor, new { @class = "form-control", @placeholder = "Número de Motor" })
+                                        @Html.TextBoxFor(m => m.NumMotor, new { @class = "form-control", @placeholder = "Número de Motor", maxlength = 255  })
                                         @Html.ValidationMessageFor(m => m.NumMotor, "", new { @class = "alert-danger" })
                                     </div>
                                 </div>
