--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_LocacionesCliente.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_LocacionesCliente.cshtml
@@ -14,4 +14,4 @@
     settings.Properties.Columns.Add("NumExt", "NumExt", 130);
     settings.Properties.Columns.Add("Colonia", "Colonia", 230);
     settings.Properties.Columns.Add("formatted_address", "Referencia", 130);
-}).GetHtml()
+}).BindList(TempData["Domicilios"]).GetHtml()
