--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_DatosCliente.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_DatosCliente.cshtml
@@ -1,40 +1,30 @@
 ﻿@Html.DevExpress().ComboBox(settings =>
 {
     settings.Name = "IdCliente";
+    settings.CallbackRouteValues = new { Controller = "Pedidos", Action = "_DatosCliente" };
     settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-    settings.SelectedIndex = 0;
-    settings.Properties.DropDownWidth = 550;
+    settings.Properties.DropDownWidth = 650;
     settings.Properties.DropDownStyle = DropDownStyle.DropDownList;
     settings.Properties.CallbackPageSize = 30;
-    settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
-    settings.Properties.TextFormatString = "{0}";
-    settings.Properties.ValueType = typeof(int);
-    settings.Properties.Columns.Add("Nombre", "Nombre", 130);
-    settings.Properties.Columns.Add("Apellido1", "Apellido", 130);
-    settings.Properties.Columns.Add("Rfc", "RFC", 230);
-    settings.Properties.Columns.Add("Telefono", "Telefono");
-}).GetHtml()
-@*@Html.DevExpress().ComboBox(settings =>
-{
-    settings.Name = "IdCliente";
-    settings.Width = 180;
-    //settings.ControlStyle.CssClass = "form-control show-tick table";
-    settings.SelectedIndex = 0;
-    settings.Properties.DropDownWidth = 550;
-    settings.Properties.DropDownStyle = DropDownStyle.DropDownList;
-    //settings.CallbackRouteValues = new { Controller = "Pedidos", Action = "_DatosCliente" };
-    settings.Properties.CallbackPageSize = 30;
-    settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
-    settings.Properties.TextFormatString = "{0}";
+    settings.Properties.TextFormatString = "{0} {1}";
     settings.Properties.ValueField = "IdCliente";
     settings.Properties.ValueType = typeof(int);
+    if (TempData["ListaCliente"] != null)
+    {
+        settings.SelectedIndex = 0;
+    }
+    settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s, e) { Orden.PerformCallback(); }";
+    settings.Properties.Columns.Add(column =>
+    {
+        column.Caption = "Nombre";
+        column.FieldName = "Nombre";
+        settings.Properties.ItemStyle.Wrap = DefaultBoolean.True;
+        column.Width = 130;
 
-    settings.Properties.Columns.Add("Nombre", "Nombre", 130);
+    });
     settings.Properties.Columns.Add("Apellido1", "Apellido", 130);
-    settings.Properties.Columns.Add("Rfc", "RFC", System.Web.UI.WebControls.Unit.Percentage(100));
-
-    settings.ClientEnabled = true;
-    settings.Properties.ClientSideEvents.Init = "getvalues";
-}).GetHtml()*@
+    settings.Properties.Columns.Add("Rfc", "RFC", 230);
+    settings.Properties.Columns.Add("Telefono", "Telefono", 100);
+}).BindList(TempData["ListaCliente"]).GetHtml()
 
 
