Se congela Codigo

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Nueva.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Empresas/Nueva.cshtml
@@ -474,6 +474,14 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="row clearfix">
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            Leyenda en ticket
+                                            @Html.TextBoxFor(m => m.Leyenda, new { @class = "form-control", @placeholder = "Leyenda para el ticket de venta" })
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
